--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -31,15 +31,15 @@
     margin-bottom: 10px;
   }
 
-.team-image:hover {
+/*.team-image:hover {
     transform: scale(1.1);
-    transition: transform 0.3s ease-in-out;
+    /*transition: transform 0.3s ease-in-out;
 }
 .team-image:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     filter: brightness(1.1);
 }
-
+*/
 .about-us {
     padding: 20px;
     text-align: center;
