--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -15,7 +15,19 @@
         font-weight: bold;
         color: rgb(1, 39, 164);
     }
+
+    .member-image {
+        width: 100px;
+        height: 100px;
+      }
 }
+ .member-image{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 10px;
+ }
 
 
   .team-member {
@@ -31,6 +43,7 @@
     margin-bottom: 10px;
   }
 
+ 
 /*.team-image:hover {
     transform: scale(1.1);
     /*transition: transform 0.3s ease-in-out;
